--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,8 @@ main > div {
     border: 4px solid #ffffff;
     background-color: #52ABF6;
     border-radius: 50%;
-    width: 30em;
+    width: 30%;
+    min-width: 200px;
     aspect-ratio: 1/1;
     overflow: hidden;
     transform: translateX(0);
@@ -82,10 +83,10 @@ main > div {
 
 #profile-pic img{
     position: relative;
-    left: 50%;
+    left: 40%;
     top: 50%;
     height: 100%;
-    aspect-ratio: 1/1;
+    width: 90%;
     transform: translate(-50%, -50%);
 }
 
@@ -259,8 +260,7 @@ a:not(.social-link a):not(.project-tile a):hover {
     
     .links {
         text-align: center;
-        margin-top: 0;
-        
+        margin-top: 0;  
     }
 
     main, footer {
@@ -301,9 +301,27 @@ a:not(.social-link a):not(.project-tile a):hover {
     }
 }
 
-@media only screen and (max-height: 500px) {
+@media only screen and (max-height: 550px) {
+    #welcome {
+        width: 70%;
+    }
+
+    #welcome h1 {
+        font-size: 1.6em;
+    }
+
+    .links {
+        margin: 30px 10px;
+    }
+}
+
+@media only screen and (max-height: 550px) and (max-width: 699px) {
     #profile-pic {
         display: none;
+    }
+
+    .links {
+        margin-top: 0;  
     }
 }
 
