--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,20 @@
-* {
+:root {
+    --primary-color: #52ABF6;
+    --secondary-color: #cadff6d3;
+    --ternary-color: #ffffff;
+    --primary-background-color: #ffffff;
+    --secondary-background-color: #52ABF6;
+    --ternary-background-color: #cadff6d3;
+    --primary-border-color: #ffffff;
+    --secondary-border-color: #52ABF6;
+    --ternary-border-color: #cadff6d3;
+    --shadow-color: #000000;
+    --hover-color: #52ABF6;
+}
+
+*,
+*::before,
+*::after{
     box-sizing: border-box;
 }
 
@@ -10,7 +26,7 @@ body {
 }
 
 #navbar{
-    background-color: #cadff6d3;
+    background-color: var(--ternary-background-color);
     position: fixed;
     left: 0;
     top: 0;
@@ -38,11 +54,11 @@ li > a > i {
 }
 
 main>div:nth-child(odd) {
-    background-color: #52ABF6;
+    background-color: var(--secondary-background-color);
 }
 
 main>div:nth-child(even) {
-    background-color: #ffffff;
+    background-color: var(--primary-background-color);
 }
 
 main {
@@ -57,10 +73,10 @@ main > div {
 #welcome-section {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     height: 100vh;
-    color: white;
+    color: var(--ternary-color);
     text-align: center;
 }
 
@@ -70,8 +86,8 @@ main > div {
 }
 
 #profile-pic{
-    border: 4px solid #ffffff;
-    background-color: #52ABF6;
+    border: 4px solid var(--primary-border-color);
+    background-color: var(--secondary-background-color);
     border-radius: 50%;
     width: 30%;
     min-width: 200px;
@@ -104,7 +120,7 @@ main > div {
 
 button{    
     margin-top: 25px;
-    background-color: white;
+    background-color:var(--primary-background-color);
     font-weight: bold;
     font-size: 16px;
     padding: 10px;
@@ -112,7 +128,7 @@ button{
 }
 
 button:hover, #submit-button:hover {    
-    background-color: #CADFF6;
+    background-color: var(--ternary-background-color);
 }
 
 #project-samples {
@@ -130,14 +146,14 @@ button:hover, #submit-button:hover {
     max-width: 27vw;
     min-width: 300px;
     aspect-ratio: 25/26;
-    background-color: white;
+    background-color: var(--primary-background-color);
     object-fit: cover;
-    border: 1px solid #ffff;
+    border: 1px solid var(--primary-border-color);
     border-radius: 10px;
 }
 
 .project-tile:hover {
-    box-shadow:0px 0px 25px -10px black;
+    box-shadow:0px 0px 25px -10px var(--shadow-color);
 }
 
 .project-tile img {
@@ -153,12 +169,12 @@ button:hover, #submit-button:hover {
 
 .project-tile:hover h4::before {
         content: "< ";
-        color: #52ABF6;
+        color: var(--primary-color);
 }
 
 .project-tile:hover h4::after {
         content: " >";
-        color: #52ABF6;
+        color: var(--primary-color);
 }
 
 .button {
@@ -185,7 +201,7 @@ input {
 
 input, textarea {
     border: none;
-    border-bottom: 1px solid #CADFF6;
+    border-bottom: 1px solid var(--ternary-border-color);
 }
 
 .connect-link {
@@ -214,13 +230,13 @@ input, textarea {
 }
 
 footer {
-    background-color: #CADFF6;
+    background-color: var(--ternary-background-color);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin-left: 5rem;
-    border-top: 3px solid #52ABF6;
-    border-left: 3px solid #52ABF6;
+    border-top: 3px solid var(--secondary-border-color);
+    border-left: 3px solid var(--secondary-border-color);
 }
 
 a {
@@ -229,7 +245,7 @@ a {
 }
 
 a:not(.social-link a):not(.project-tile a):hover {
-    color: gray;
+    color: var(--hover-color);
 }
 
 @media only screen{
@@ -251,9 +267,9 @@ a:not(.social-link a):not(.project-tile a):hover {
     }
     
     #nav2 ul {
-        width: 68%;
+        width: 65%;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         flex-direction: row;
         margin-left: 28%;
     }
@@ -273,7 +289,6 @@ a:not(.social-link a):not(.project-tile a):hover {
         justify-content:center;
         align-items: center;
         height: 100vh;
-        color: white;
     }
 
     #profile-pic{
